--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,26 @@
 <header>
-  <nav class="navbar navbar-default navbar-static-top">
+  <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-left" href="/"><img src="/images/logo.png" alt="Monolist"></a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Microposts</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to '新規登録', signup_path %></li>
-        <li><a href="#">ログイン</a></li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% unless logged_in? %>
+            <li><%= link_to 'Signup', signup_path %></li>
+            <li><%= link_to 'Login', login_path %></li>
+            
+          <% else %>
+            <li><%= link_to 'Users', users_path %></li>
+            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </nav>
